--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 <h1>Why hello there</h1>
+<h2>this is a website (duh)</h2>
+<h3>nothing is here yet though</h3>
+<h4>(ok maybe a bit but dont tell anyone)</h4>
