--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-pp?
+<!DOCTYPE html>
+<html lang="en">
+<title>PandaCatPlayz</title>
+<canvas id="nokey" width="800" height="800">
+    Your Browser Don't Support Canvas, Please Download Chrome ^_^``
+</canvas>
+</html>
