yoinking verlox stuff for testing

--- a/index.html
+++ b/index.html
@@ -1,7 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>PandaCatPlayz</title>
-<canvas id="nokey" width="800" height="800">
-    Your Browser Don't Support Canvas, Please Download Chrome ^_^``
-</canvas>
+<head>
+  <title>verlox</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/cte.css">
+</head>
+<body>
+  <div id="particles-container"></div>
+  
+  <audio controls hidden loop>
+    <source src="assets/audio/song.mp3" type="audio/mpeg">
+  </audio>
+  
+  <div id="content-container">
+    <div class="center title topbar"><img class="emoji" src="/assets/images/seperator.png"> verlox.cc <img class="emoji" src="/assets/images/seperator.png"></div>
+    <span id="typing" class="center"></span>
+    <div class="inline-container bottombar center">
+      <!-- discord terminated <img style="height: 20px;bottom:50%;transform:translateY(30%);" src="/assets/images/seperator.png"> -->
+      <pre style="display: inline-block;">|<div style="vertical-align: middle;" id="marquee"></div>|</pre>
+    </div>
+  </div>
+  
+  <script src="/assets/particles.js/particles.min.js"></script>
+  <script src="/assets/particles.js/app.js"></script>
+  <script src="/assets/js/cte.js"></script>
+
+  <script src="/assets/js/jquery.min.js"></script>
+  <script src="/assets/js/jquery.marquee.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+  <script>
+    // var CTE = {};
+    CTE.callback = () => {
+      var aud = document.getElementsByTagName("audio")[0];
+      aud.volume = .3;
+      aud.play();
+
+      var typed = new Typed("#typing", {
+        strings: ["destroying kids dreams since 2017", "lithium owns you", "lithium owner", "reaping rewards", "professional kpop destroyer", "discord terminated", "verlox#0001"],
+        typeSpeed: 30,
+        backspeed: 20,
+        showCursor: false
+      });
+
+      var lines = ["discord.gg/lith", "discord terminated", "github.com/verlox"];
+      for (var x = 0;x < lines.length;x++)
+        $("#marquee").append(`${lines[x]}${(x < lines.length - 1? ' <img class="emoji" src="/assets/images/seperator.png"> ' : '')}`);
+
+      $("#marquee").marquee({
+        duration: 7500,
+        gap: 100,
+        delayBeforeStart: 1000,
+        direction: 'left',
+      });
+    }
+    // CTE.callback();
+  </script>
+</body>
 </html>
