--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>verlox</title>
+  <title>PandaCatPlayz</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +40,7 @@
       aud.play();
 
       var typed = new Typed("#typing", {
-        strings: ["destroying kids dreams since 2017", "lithium owns you", "lithium owner", "reaping rewards", "professional kpop destroyer", "discord terminated", "verlox#0001"],
+        strings: ["a", "b", "c", "d", "e", "f", "g"],
         typeSpeed: 30,
         backspeed: 20,
         showCursor: false
