--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         showCursor: false
       });
 
-      var lines = ["discord.gg/lith", "discord terminated", "github.com/verlox"];
+      var lines = ["x", "y", "z"];
       for (var x = 0;x < lines.length;x++)
         $("#marquee").append(`${lines[x]}${(x < lines.length - 1? ' <img class="emoji" src="/assets/images/seperator.png"> ' : '')}`);
 
