--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
   </audio>
   
   <div id="content-container">
-    <div class="center title topbar"><img class="emoji" src="/assets/images/seperator.png"> verlox.cc <img class="emoji" src="/assets/images/seperator.png"></div>
+    <div class="center title topbar"><img class="emoji" src="/assets/images/seperator.png"> pandacatplayz <img class="emoji" src="/assets/images/seperator.png"></div>
     <span id="typing" class="center"></span>
     <div class="inline-container bottombar center">
-      <!-- discord terminated <img style="height: 20px;bottom:50%;transform:translateY(30%);" src="/assets/images/seperator.png"> -->
       <pre style="display: inline-block;">|<div style="vertical-align: middle;" id="marquee"></div>|</pre>
     </div>
   </div>
@@ -46,7 +45,7 @@
         showCursor: false
       });
 
-      var lines = ["x", "y", "z"];
+      var lines = ["github.com/PandaCatPlayz", "github.com/Sakura-Development", "pandacatplayz.github.io/commissions"];
       for (var x = 0;x < lines.length;x++)
         $("#marquee").append(`${lines[x]}${(x < lines.length - 1? ' <img class="emoji" src="/assets/images/seperator.png"> ' : '')}`);
 
