--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </audio>
   
   <div id="content-container">
-    <div class="center title topbar"><img class="emoji" src="/assets/images/seperator.png"> pandacatplayz <img class="emoji" src="/assets/images/seperator.png"></div>
+    <div class="center title topbar"> 🌸 pandacatplayz 🌸 </div>
     <span id="typing" class="center"></span>
     <div class="inline-container bottombar center">
       <pre style="display: inline-block;">|<div style="vertical-align: middle;" id="marquee"></div>|</pre>
@@ -39,7 +39,7 @@
       aud.play();
 
       var typed = new Typed("#typing", {
-        strings: ["a", "b", "c", "d", "e", "f", "g"],
+        strings: ["programming since '16", "midnight void", "mugen creator", "rb26 swapper", "", "", ""],
         typeSpeed: 30,
         backspeed: 20,
         showCursor: false
@@ -47,7 +47,7 @@
 
       var lines = ["github.com/PandaCatPlayz", "github.com/Sakura-Development", "pandacatplayz.github.io/commissions"];
       for (var x = 0;x < lines.length;x++)
-        $("#marquee").append(`${lines[x]}${(x < lines.length - 1? ' <img class="emoji" src="/assets/images/seperator.png"> ' : '')}`);
+        $("#marquee").append(`${lines[x]}${(x < lines.length - 1? ' 🌸 ' : '')}`);
 
       $("#marquee").marquee({
         duration: 7500,
