--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       aud.play();
 
       var typed = new Typed("#typing", {
-        strings: ["programming since '16", "midnight void", "mugen creator", "rb26 swapper", "", "", ""],
+        strings: ["programming since '16", "midnight void founder", "mugen creator", "rb26 swapper", "web commissioner", "nissan driver", "panda"],
         typeSpeed: 30,
         backspeed: 20,
         showCursor: false
