--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>PandaCatPlayz</title>
+  <title>sakuradev</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
   </audio>
   
   <div id="content-container">
-    <div class="center title topbar"> 🌸 pandacatplayz 🌸 </div>
+    <div class="center title topbar"> 🌸 sakuradev 🌸 </div>
     <span id="typing" class="center"></span>
     <div class="inline-container bottombar center">
       <pre style="display: inline-block;">|<div style="vertical-align: middle;" id="marquee"></div>|</pre>
