--- a/commissions/automotiveclub/index.html
+++ b/commissions/automotiveclub/index.html
@@ -4,231 +4,219 @@
 <title>Sato Automotive</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://sakura-development.github.io/css-packages/sakura-w3/sw3.css">
+<link rel="stylesheet" href="https://www.sw3schools.com/sw3css/4/sw3.css">
+<link rel="stylesheet" href="https://sakura-development.github.io/css-packages/sakura-sw3/sw3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 .mySlides {display:none}
-.w3-tag, .fa {cursor:pointer}
-.w3-tag {height:15px;width:15px;padding:0;margin-top:6px}
+.sw3-tag, .fa {cursor:pointer}
+.sw3-tag {height:15px;width:15px;padding:0;margin-top:6px}
 </style>
 </head>
 <body>
 
 <!-- Links (sit on top) -->
-<div class="w3-top">
-  <div class="w3-row w3-large w3-light-grey">
-    <div class="w3-col s4">
-      <a href="#" class="w3-button w3-block">Home</a>
+<div class="sw3-top">
+  <div class="sw3-row sw3-large sw3-light-grey">
+    <div class="sw3-col s4">
+      <a href="#" class="sw3-button sw3-block">Home</a>
     </div>
-    <div class="w3-col s4">
-      <a href="#about" class="w3-button w3-block">About</a>
+    <div class="sw3-col s4">
+      <a href="#about" class="sw3-button sw3-block">About</a>
     </div>
-    <div class="w3-col s4">
-      <a href="#contact" class="w3-button w3-block">Contact</a>
+    <div class="sw3-col s4">
+      <a href="#contact" class="sw3-button sw3-block">Contact</a>
     </div>
   </div>
 </div>
 
 <!-- Content -->
-<div class="w3-content" style="max-width:1100px;margin-top:80px;margin-bottom:80px">
+<div class="sw3-content" style="max-width:1100px;margin-top:80px;margin-bottom:80px">
 
-  <div class="w3-panel">
+  <div class="sw3-panel">
     <h1><b>Automotive Engineering Club</b></h1>
     <p>Sato Academy of Math and Science</p>
   </div>
 
   <!-- Slideshow -->
-  <div class="w3-container">
-    <div class="w3-display-container mySlides">
-      <img src="/w3images/coffee.jpg" style="width:100%">
-      <div class="w3-display-topleft w3-container w3-padding-32">
-        <span class="w3-white w3-padding-large w3-animate-bottom">Lorem ipsum</span>
+  <div class="sw3-container">
+    <div class="sw3-display-container mySlides">
+      <img src="/sw3images/coffee.jpg" style="width:100%">
+      <div class="sw3-display-topleft sw3-container sw3-padding-32">
+        <span class="sw3-white sw3-padding-large sw3-animate-bottom">Lorem ipsum</span>
       </div>
     </div>
-    <div class="w3-display-container mySlides">
-      <img src="/w3images/workbench.jpg" style="width:100%">
-      <div class="w3-display-middle w3-container w3-padding-32">
-        <span class="w3-white w3-padding-large w3-animate-bottom">Klorim tipsum</span>
+    <div class="sw3-display-container mySlides">
+      <img src="/sw3images/workbench.jpg" style="width:100%">
+      <div class="sw3-display-middle sw3-container sw3-padding-32">
+        <span class="sw3-white sw3-padding-large sw3-animate-bottom">Klorim tipsum</span>
       </div>
     </div>
-    <div class="w3-display-container mySlides">
-      <img src="/w3images/sound.jpg" style="width:100%">
-      <div class="w3-display-topright w3-container w3-padding-32">
-        <span class="w3-white w3-padding-large w3-animate-bottom">Blorum pipsum</span>
+    <div class="sw3-display-container mySlides">
+      <img src="/sw3images/sound.jpg" style="width:100%">
+      <div class="sw3-display-topright sw3-container sw3-padding-32">
+        <span class="sw3-white sw3-padding-large sw3-animate-bottom">Blorum pipsum</span>
       </div>
     </div>
 
     <!-- Slideshow next/previous buttons -->
-    <div class="w3-container w3-dark-grey w3-padding w3-xlarge">
-      <div class="w3-left" onclick="plusDivs(-1)"><i class="fa fa-arrow-circle-left w3-hover-text-teal"></i></div>
-      <div class="w3-right" onclick="plusDivs(1)"><i class="fa fa-arrow-circle-right w3-hover-text-teal"></i></div>
+    <div class="sw3-container sw3-dark-grey sw3-padding sw3-xlarge">
+      <div class="sw3-left" onclick="plusDivs(-1)"><i class="fa fa-arrow-circle-left sw3-hover-text-teal"></i></div>
+      <div class="sw3-right" onclick="plusDivs(1)"><i class="fa fa-arrow-circle-right sw3-hover-text-teal"></i></div>
     
-      <div class="w3-center">
-        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+      <div class="sw3-center">
+        <span class="sw3-tag demodots sw3-border sw3-transparent sw3-hover-white" onclick="currentDiv(1)"></span>
+        <span class="sw3-tag demodots sw3-border sw3-transparent sw3-hover-white" onclick="currentDiv(2)"></span>
+        <span class="sw3-tag demodots sw3-border sw3-transparent sw3-hover-white" onclick="currentDiv(3)"></span>
       </div>
     </div>
   </div>
   
   <!-- Grid -->
-  <div class="w3-row w3-container">
-    <div class="w3-center w3-padding-64">
-      <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">What We Offer</span>
+  <div class="sw3-row sw3-container">
+    <div class="sw3-center sw3-padding-64">
+      <span class="sw3-xlarge sw3-bottombar sw3-border-dark-grey sw3-padding-16">What We Offer</span>
     </div>
-    <div class="w3-col l3 m6 w3-light-grey w3-container w3-padding-16">
+    <div class="sw3-col l3 m6 sw3-light-grey sw3-container sw3-padding-16">
       <h3>Design</h3>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>Favorite Ca
+      </p>
     </div>
 
-    <div class="w3-col l3 m6 w3-grey w3-container w3-padding-16">
+    <div class="sw3-col l3 m6 sw3-grey sw3-container sw3-padding-16">
       <h3>Branding</h3>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>Favorite Ca
+      </p>
     </div>
 
-    <div class="w3-col l3 m6 w3-dark-grey w3-container w3-padding-16">
+    <div class="sw3-col l3 m6 sw3-dark-grey sw3-container sw3-padding-16">
       <h3>Consultation</h3>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>Favorite Ca
+      </p>
     </div>
 
-    <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
+    <div class="sw3-col l3 m6 sw3-black sw3-container sw3-padding-16">
       <h3>Promises</h3>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>Favorite Ca
+      </p>
     </div>
   </div>
 
   <!-- Grid -->
-  <div class="w3-row-padding" id="plans">
-    <div class="w3-center w3-padding-64">
+  <div class="sw3-row-padding" id="plans">
+    <div class="sw3-center sw3-padding-64">
       <h3>Pricing Plans</h3>
       <p>Choose a pricing plan that fits your needs.</p>
     </div>
 
-    <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-center w3-hover-shadow">
-        <li class="w3-black w3-xlarge w3-padding-32">Basic</li>
-        <li class="w3-padding-16"><b>10GB</b> Storage</li>
-        <li class="w3-padding-16"><b>10</b> Emails</li>
-        <li class="w3-padding-16"><b>10</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
-        <li class="w3-padding-16">
-          <h2 class="w3-wide">$ 10</h2>
-          <span class="w3-opacity">per month</span>
+    <div class="sw3-third sw3-margin-bottom">
+      <ul class="sw3-ul sw3-border sw3-center sw3-hover-shadow">
+        <li class="sw3-black sw3-xlarge sw3-padding-32">Basic</li>
+        <li class="sw3-padding-16"><b>1</b> Logo on GoKarts</li>
+        <li class="sw3-padding-16"><b>1</b> Link on Emails</li>
+        <li class="sw3-padding-16"><b>Endless</b> Support</li>
+        <li class="sw3-padding-16">
+          <h2 class="sw3-wide">$ 50</h2>
+          <span class="sw3-opacity">Once</span>
         </li>
       </ul>
     </div>
 
-    <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-center w3-hover-shadow">
-        <li class="w3-dark-grey w3-xlarge w3-padding-32">Pro</li>
-        <li class="w3-padding-16"><b>25GB</b> Storage</li>
-        <li class="w3-padding-16"><b>25</b> Emails</li>
-        <li class="w3-padding-16"><b>25</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
-        <li class="w3-padding-16">
-          <h2 class="w3-wide">$ 25</h2>
-          <span class="w3-opacity">per month</span>
+    <div class="sw3-third sw3-margin-bottom">
+      <ul class="sw3-ul sw3-border sw3-center sw3-hover-shadow">
+        <li class="sw3-dark-grey sw3-xlarge sw3-padding-32">Pro</li>
+        <li class="sw3-padding-16"><b>2</b> Logo on GoKarts</li>
+        <li class="sw3-padding-16"><b>1</b> Link on Emails</li>
+        <li class="sw3-padding-16"><b>1</b> Logo on Cars</li>
+        <li class="sw3-padding-16"><b>Endless</b> Support</li>
+        <li class="sw3-padding-16">
+          <h2 class="sw3-wide">$ 100</h2>
+          <span class="sw3-opacity">Once</span>
         </li>
       </ul>
     </div>
 
-    <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-center w3-hover-shadow">
-        <li class="w3-black w3-xlarge w3-padding-32">Premium</li>
-        <li class="w3-padding-16"><b>50GB</b> Storage</li>
-        <li class="w3-padding-16"><b>50</b> Emails</li>
-        <li class="w3-padding-16"><b>50</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
-        <li class="w3-padding-16">
-          <h2 class="w3-wide">$ 50</h2>
-          <span class="w3-opacity">per month</span>
+    <div class="sw3-third sw3-margin-bottom">
+      <ul class="sw3-ul sw3-border sw3-center sw3-hover-shadow">
+        <li class="sw3-black sw3-xlarge sw3-padding-32">Premium</li>
+        <li class="sw3-padding-16"><b>5</b> Logo on GoKarts</li>
+        <li class="sw3-padding-16"><b>1</b> Link on Emails</li>
+        <li class="sw3-padding-16"><b>5</b> Logo on Cars</li>
+        <li class="sw3-padding-16"><b>Endless</b> Support</li>
+        <li class="sw3-padding-16">
+          <h2 class="sw3-wide">$ 200</h2>
+          <span class="sw3-opacity">Once</span>
         </li>
       </ul>
     </div>
   </div>
 
   <!-- Grid -->
-  <div class="w3-row-padding" id="about">
-    <div class="w3-center w3-padding-64">
-      <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Who We Are</span>
+  <div class="sw3-row-padding" id="about">
+    <div class="sw3-center sw3-padding-64">
+      <span class="sw3-xlarge sw3-bottombar sw3-border-dark-grey sw3-padding-16">Who We Are</span>
     </div>
 
-    <div class="w3-third w3-margin-bottom">
-      <div class="w3-card-4">
-        <img src="/w3images/team1.jpg" alt="John" style="width:100%">
-        <div class="w3-container">
+    <div class="sw3-third sw3-margin-bottom">
+      <div class="sw3-card-4">
+        <img src="/assets/connor.jpg" alt="Connor" style="width:100%">
+        <div class="sw3-container">
           <h3>Connor De Leo</h3>
-          <p class="w3-opacity">President & Founder</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-light-grey w3-block">connordeleo@gmail.com</button></p>
+          <p class="sw3-opacity">President & Founder</p>
+          <p>Favorite Car: Nissan Skyline GTR R34 V-Spec II Nür
+          </p>
+          <p><button class="sw3-light-grey sw3-block">connordeleo@gmail.com</button></p>
         </div>
       </div>
     </div>
 
-    <div class="w3-third w3-margin-bottom">
-      <div class="w3-card-4">
-        <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
-        <div class="w3-container">
+    <div class="sw3-third sw3-margin-bottom">
+      <div class="sw3-card-4">
+        <img src="/assets/mallen.jpg" alt="Mallen" style="width:100%">
+        <div class="sw3-container">
           <h3>Mallen Mueller-Dombois</h3>
-          <p class="w3-opacity">Vice President & Founder</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-light-grey w3-block">email@email.email</button></p>
+          <p class="sw3-opacity">Vice President & Founder</p>
+          <p>Favorite Car:
+          </p>
+          <p><button class="sw3-light-grey sw3-block">email@email.email</button></p>
         </div>
       </div>
     </div>
 
-    <div class="w3-third w3-margin-bottom">
-      <div class="w3-card-4">
-        <img src="/w3images/team3.jpg" alt="Jane" style="width:100%">
-        <div class="w3-container">
-          <h3>John Doe</h3>
-          <p class="w3-opacity">Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-light-grey w3-block">ljperez@lbschools.net</button></p>
+    <div class="sw3-third sw3-margin-bottom">
+      <div class="sw3-card-4">
+        <img src="/assets/perez.jpg" alt="Mr. Perez" style="width:100%">
+        <div class="sw3-container">
+          <h3>Mr. Perez</h3>
+          <p class="sw3-opacity">Advisor</p>
+          <p>Favorite Car:</p>
+          <p><button class="sw3-light-grey sw3-block">ljperez@lbschools.net</button></p>
         </div>
       </div>
     </div>
   </div>
 
   <!-- Contact -->
-  <div class="w3-center w3-padding-64" id="contact">
-    <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Contact Us</span>
+  <div class="sw3-center sw3-padding-64" id="contact">
+    <span class="sw3-xlarge sw3-bottombar sw3-border-dark-grey sw3-padding-16">Contact Us</span>
   </div>
-
-  <form class="w3-container" action="/action_page.php" target="_blank">
-    <div class="w3-section">
-      <label>Name</label>
-      <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" type="text" name="Name" required>
-    </div>
-    <div class="w3-section">
-      <label>Email</label>
-      <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" type="text" name="Email" required>
-    </div>
-    <div class="w3-section">
-      <label>Subject</label>
-      <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" name="Subject" required>
-    </div>
-    <div class="w3-section">
-      <label>Message</label>
-      <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" name="Message" required>
-    </div>
-    <button type="submit" class="w3-button w3-block w3-black">Send</button>
-  </form>
+  <div>
+    <center class="sw3-centered sw3-large sw3-border-dark-gray sw3-padding-16">satoautomotive@gmail.com</center>
+  </div>
 
 </div>
 
 <!-- Footer -->
 
-<footer class="w3-container w3-padding-32 w3-light-grey w3-center">
+<footer class="sw3-container sw3-padding-32 sw3-light-grey sw3-center">
   <h4>Footer</h4>
-  <a href="#" class="w3-button w3-black w3-margin"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+  <a href="#" class="sw3-button sw3-black sw3-margin"><i class="fa fa-arrow-up sw3-margin-right"></i>To the top</a>
+  <div class="sw3-xlarge sw3-section">
+    <i class="fa fa-facebook-official sw3-hover-opacity"></i>
   </div>
-  <p>Powered by <a href="https://github.com/Sakura-Development/sakura-development.github.io/tree/master/css-packages/sakura-w3" title="SW3.CSS" target="_blank" class="w3-hover-text-green">sw3.css</a></p>
+  <p>Powered by <a href="https://github.com/Sakura-Development/sakura-development.github.io/tree/master/css-packages/sakura-sw3" title="SW3.CSS" target="_blank" class="sw3-hover-text-green">sw3.css</a></p>
 </footer>
 
 
@@ -255,10 +243,10 @@ function showDivs(n) {
     x[i].style.display = "none";  
   }
   for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" w3-white", "");
+    dots[i].className = dots[i].className.replace(" sw3-white", "");
   }
   x[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " w3-white";
+  dots[slideIndex-1].className += " sw3-white";
 }
 </script>
 
