--- a/commissions/automotiveclub/index.html
+++ b/commissions/automotiveclub/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.sw3schools.com/sw3css/4/sw3.css">
-<link rel="stylesheet" href="https://sakura-development.github.io/css-packages/sakura-sw3/sw3.css">
+<link rel="stylesheet" href="https://sakura-development.github.io/css-packages/sakura-w3/sw3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -43,21 +43,21 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
   <!-- Slideshow -->
   <div class="sw3-container">
     <div class="sw3-display-container mySlides">
-      <img src="/sw3images/coffee.jpg" style="width:100%">
+      <img src="/assets/members.jpg" style="width:100%">
       <div class="sw3-display-topleft sw3-container sw3-padding-32">
-        <span class="sw3-white sw3-padding-large sw3-animate-bottom">Lorem ipsum</span>
+        <span class="sw3-white sw3-padding-large sw3-animate-bottom">Our Members</span>
       </div>
     </div>
     <div class="sw3-display-container mySlides">
-      <img src="/sw3images/workbench.jpg" style="width:100%">
+      <img src="/assets/karts.jpg" style="width:100%">
       <div class="sw3-display-middle sw3-container sw3-padding-32">
-        <span class="sw3-white sw3-padding-large sw3-animate-bottom">Klorim tipsum</span>
+        <span class="sw3-white sw3-padding-large sw3-animate-bottom">Our Karts</span>
       </div>
     </div>
     <div class="sw3-display-container mySlides">
-      <img src="/sw3images/sound.jpg" style="width:100%">
+      <img src="/assets/w3.jpg" style="width:100%">
       <div class="sw3-display-topright sw3-container sw3-padding-32">
-        <span class="sw3-white sw3-padding-large sw3-animate-bottom">Blorum pipsum</span>
+        <span class="sw3-white sw3-padding-large sw3-animate-bottom">Our </span>
       </div>
     </div>
 
@@ -81,26 +81,22 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
     </div>
     <div class="sw3-col l3 m6 sw3-light-grey sw3-container sw3-padding-16">
       <h3>Design</h3>
-      <p>Favorite Ca
-      </p>
+      <p>We design most parts in house using Fusion360 & LaserCAD</p>
     </div>
 
     <div class="sw3-col l3 m6 sw3-grey sw3-container sw3-padding-16">
-      <h3>Branding</h3>
-      <p>Favorite Ca
-      </p>
+      <h3>Manufacturing</h3>
+      <p>We have six Haas Minimills that we use to manufacture our own parts alongside a laser cutter and multiple 3d printers</p>
     </div>
 
     <div class="sw3-col l3 m6 sw3-dark-grey sw3-container sw3-padding-16">
-      <h3>Consultation</h3>
-      <p>Favorite Ca
-      </p>
+      <h3>PLACEHOLDER</h3>
+      <p></p>
     </div>
 
     <div class="sw3-col l3 m6 sw3-black sw3-container sw3-padding-16">
-      <h3>Promises</h3>
-      <p>Favorite Ca
-      </p>
+      <h3>PLACEHOLDER</h3>
+      <p></p>
     </div>
   </div>
 
@@ -165,8 +161,8 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
         <div class="sw3-container">
           <h3>Connor De Leo</h3>
           <p class="sw3-opacity">President & Founder</p>
-          <p>Favorite Car: Nissan Skyline GTR R34 V-Spec II Nür
-          </p>
+          <p>Favorite Car: Nissan Skyline GTR R34 V-Spec II Nür</p>
+          <p>Projects: Drift GoKart Lead, Race GoKart Member, 24 Hours of Lemons Lead</p>
           <p><button class="sw3-light-grey sw3-block">connordeleo@gmail.com</button></p>
         </div>
       </div>
@@ -178,8 +174,8 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
         <div class="sw3-container">
           <h3>Mallen Mueller-Dombois</h3>
           <p class="sw3-opacity">Vice President & Founder</p>
-          <p>Favorite Car:
-          </p>
+          <p>Favorite Car: </p>
+          <p>Projects: Drift GoKart Member, Race GoKart Member, 24 Hours of Lemons Member</p>
           <p><button class="sw3-light-grey sw3-block">email@email.email</button></p>
         </div>
       </div>
@@ -203,7 +199,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
     <span class="sw3-xlarge sw3-bottombar sw3-border-dark-grey sw3-padding-16">Contact Us</span>
   </div>
   <div>
-    <center class="sw3-centered sw3-large sw3-border-dark-gray sw3-padding-16">satoautomotive@gmail.com</center>
+    <center class="sw3-large sw3-border-dark-gray sw3-padding-16">satoautomotive@gmail.com</center>
   </div>
 
 </div>
@@ -216,7 +212,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
   <div class="sw3-xlarge sw3-section">
     <i class="fa fa-facebook-official sw3-hover-opacity"></i>
   </div>
-  <p>Powered by <a href="https://github.com/Sakura-Development/sakura-development.github.io/tree/master/css-packages/sakura-sw3" title="SW3.CSS" target="_blank" class="sw3-hover-text-green">sw3.css</a></p>
+  <p>Powered by <a href="https://github.com/Sakura-Development/sakura-development.github.io/tree/master/css-packages/sakura-sw3" title="SW3.CSS" target="_blank" class="sw3-hover-text-sakura">sw3.css</a></p>
 </footer>
 
 
