--- a/commissions/automotiveclub/index.html
+++ b/commissions/automotiveclub/index.html
@@ -90,13 +90,13 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
     </div>
 
     <div class="sw3-col l3 m6 sw3-dark-grey sw3-container sw3-padding-16">
-      <h3>PLACEHOLDER</h3>
-      <p></p>
+      <h3>Projects</h3>
+      <p>Our club offers a variety of projects including a Race GoKart, a Drift GoKart, and a 24 hours of Lemons car. We also have multiple RC cars students can work on</p>
     </div>
 
     <div class="sw3-col l3 m6 sw3-black sw3-container sw3-padding-16">
-      <h3>PLACEHOLDER</h3>
-      <p></p>
+      <h3>Competition</h3>
+      <p>As a school we compete in a variety of competitions, but as a club we compete with GoKarts and the 24 Hours of Lemons</p>
     </div>
   </div>
 
