--- a/commissions/automotiveclub/index.html
+++ b/commissions/automotiveclub/index.html
@@ -163,7 +163,11 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
           <p class="sw3-opacity">President & Founder</p>
           <p>Favorite Car: Nissan Skyline GTR R34 V-Spec II Nür</p>
           <p>Projects: Drift GoKart Lead, Race GoKart Member, 24 Hours of Lemons Lead</p>
-          <p><button class="sw3-light-grey sw3-block">connordeleo@gmail.com</button></p>
+          <p>
+            <button class="sw3-light-grey sw3-block">
+              <a href="mailto:connordeleo@gmail.com" class="sw3-hover-text-sakura">connordeleo@gmail.com</a>
+            </button>
+          </p>
         </div>
       </div>
     </div>
@@ -176,7 +180,11 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
           <p class="sw3-opacity">Vice President & Founder</p>
           <p>Favorite Car: </p>
           <p>Projects: Drift GoKart Member, Race GoKart Member, 24 Hours of Lemons Member</p>
-          <p><button class="sw3-light-grey sw3-block">email@email.email</button></p>
+          <p>
+            <button class="sw3-light-grey sw3-block">
+              <a href="mailto:email@gmail.com" class="sw3-hover-text-sakura">email@gmail.com</a>
+            </button>
+          </p>
         </div>
       </div>
     </div>
@@ -188,7 +196,11 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
           <h3>Mr. Perez</h3>
           <p class="sw3-opacity">Advisor</p>
           <p>Favorite Car:</p>
-          <p><button class="sw3-light-grey sw3-block">ljperez@lbschools.net</button></p>
+          <p>
+            <button class="sw3-light-grey sw3-block">
+              <a href="mailto:ljperez@lbschools.net" class="sw3-hover-text-sakura">ljperez@lbschools.net</a>
+            </button>
+          </p>
         </div>
       </div>
     </div>
