--- a/commissions/automotiveclub/index.html
+++ b/commissions/automotiveclub/index.html
@@ -178,7 +178,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
         <div class="sw3-container">
           <h3>Mallen Mueller-Dombois</h3>
           <p class="sw3-opacity">Vice President & Founder</p>
-          <p>Favorite Car: </p>
+          <p>Favorite Car: Audi 200 20-valve</p>
           <p>Projects: Drift GoKart Member, Race GoKart Member, 24 Hours of Lemons Member</p>
           <p>
             <button class="sw3-light-grey sw3-block">
@@ -195,7 +195,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
         <div class="sw3-container">
           <h3>Mr. Perez</h3>
           <p class="sw3-opacity">Advisor</p>
-          <p>Favorite Car:</p>
+          <p>Favorite Car: Citroen DS</p>
           <p>
             <button class="sw3-light-grey sw3-block">
               <a href="mailto:ljperez@lbschools.net" class="sw3-hover-text-sakura">ljperez@lbschools.net</a>
