--- a/commissions/automotiveclub/index.html
+++ b/commissions/automotiveclub/index.html
@@ -191,7 +191,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 
     <div class="sw3-third sw3-margin-bottom">
       <div class="sw3-card-4">
-        <img src="/assets/perez.jpg" alt="Mr. Perez" style="width:100%">
+        <img src="assets/perez.jpg" alt="Mr. Perez" style="width:100%">
         <div class="sw3-container">
           <h3>Mr. Perez</h3>
           <p class="sw3-opacity">Advisor</p>
