--- a/commissions/automotiveclub/index.html
+++ b/commissions/automotiveclub/index.html
@@ -157,7 +157,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 
     <div class="sw3-third sw3-margin-bottom">
       <div class="sw3-card-4">
-        <img src="/assets/connor.jpg" alt="Connor" style="width:100%">
+        <img src="assets/connor.jpg" alt="Connor" style="width:100%">
         <div class="sw3-container">
           <h3>Connor De Leo</h3>
           <p class="sw3-opacity">President & Founder</p>
@@ -174,7 +174,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 
     <div class="sw3-third sw3-margin-bottom">
       <div class="sw3-card-4">
-        <img src="/assets/mallen.jpg" alt="Mallen" style="width:100%">
+        <img src="assets/mallen.jpg" alt="Mallen" style="width:100%">
         <div class="sw3-container">
           <h3>Mallen Mueller-Dombois</h3>
           <p class="sw3-opacity">Vice President & Founder</p>
