--- a/commissions/automotiveclub/index.html
+++ b/commissions/automotiveclub/index.html
@@ -182,7 +182,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
           <p>Projects: Drift GoKart Member, Race GoKart Member, 24 Hours of Lemons Member</p>
           <p>
             <button class="sw3-light-grey sw3-block">
-              <a href="mailto:email@gmail.com" class="sw3-hover-text-sakura">email@gmail.com</a>
+              <a href="mailto:mallenmd06@gmail.com" class="sw3-hover-text-sakura">mallenmd06@gmail.com</a>
             </button>
           </p>
         </div>
