--- a/commissions/automotiveclub/index.html
+++ b/commissions/automotiveclub/index.html
@@ -55,9 +55,9 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
       </div>
     </div>
     <div class="sw3-display-container mySlides">
-      <img src="/assets/w3.jpg" style="width:100%">
+      <img src="/assets/equipment.jpg" style="width:100%">
       <div class="sw3-display-topright sw3-container sw3-padding-32">
-        <span class="sw3-white sw3-padding-large sw3-animate-bottom">Our </span>
+        <span class="sw3-white sw3-padding-large sw3-animate-bottom">Our Equipment</span>
       </div>
     </div>
 
