--- a/TexturePackHub/index.html
+++ b/TexturePackHub/index.html
@@ -1,13 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>sakuradev</title>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/bootstrap.css">
-</head>
-<body>
+<html>
+    <head>
+        <title>TexturePackHub | Home</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="">Texture Pack Hub</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarColor01">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="">Home
+                                <span class="visually-hidden">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Texture Packs</a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="189">1.8.9</a>
+                                <a class="dropdown-item" href="116">1.16</a>
+                                <a class="dropdown-item" href="119">1.19</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pricing">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
-</body>
+        <div>
+            <div class="centered-title">
+                <h1>
+                    Welcome to Texture Pack Hub!
+                </h1>
+            </div>
+
+            <div class="main-div">
+                <h3>
+                    What is Texture Pack Hub?
+                </h3>
+                <h5>
+                    Texture Pack Hub is your one stop shop for custom texture packs! Here you can browse the many packs from multiple creators! You can even commission texture packs from your favorite designer!
+                </h5>
+            </div>
+            
+            <div class="main-div">
+                <h3>
+                    Featured pack:
+                </h3>
+                <div class="centered-title">
+                    <h3>
+                        Sakura PvP
+                    </h3>
+                </div>
+                <img class="featured" src="assets/images/featured.png" alt="Featured Pack">
+            </div>
+        </div>
+    </body>
 </html>
