--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/cte.css">
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
 </head>
 <body>
   <div id="particles-container"></div>
