--- a/TexturePackHub/index.html
+++ b/TexturePackHub/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/main.css">
-        <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="https://www.flaticon.com/free-icons/paintbrush">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -55,7 +55,7 @@
                     Texture Pack Hub is your one stop shop for custom texture packs! Here you can browse the many packs from multiple creators! You can even commission texture packs from your favorite designer!
                 </h5>
             </div>
-            
+
             <div class="main-div">
                 <h3>
                     Featured pack:
