--- a/TexturePackHub/index.html
+++ b/TexturePackHub/index.html
@@ -5,8 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/main.css">
-        <link rel="icon" type="image/x-icon" href="https://www.flaticon.com/free-icons/paintbrush">
+        <link rel="icon" type="image/png" href="https://icons8.com/icon/xvnyHzuJqvNC/paint-brush">
     </head>
+
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
