--- a/TexturePackHub/index.html
+++ b/TexturePackHub/index.html
@@ -23,8 +23,8 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Texture Packs</a>
-                            <div class="dropdown-menu">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" href="" aria-haspopup="true" aria-expanded="false">Texture Packs</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="189">1.8.9</a>
                                 <a class="dropdown-item" href="116">1.16</a>
                                 <a class="dropdown-item" href="119">1.19</a>
@@ -70,4 +70,5 @@
             </div>
         </div>
     </body>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
 </html>
