--- a/TexturePackHub/index.html
+++ b/TexturePackHub/index.html
@@ -23,13 +23,21 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" href="" aria-haspopup="true" aria-expanded="false">Texture Packs</a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="189">1.8.9</a>
-                                <a class="dropdown-item" href="116">1.16</a>
-                                <a class="dropdown-item" href="119">1.19</a>
-                            </div>
-                        </li>
+              <button
+                class="btn btn-dark dropdown-toggle"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Fuck
+              </button>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
                         <li class="nav-item">
                             <a class="nav-link" href="pricing">Pricing</a>
                         </li>
