--- a/TexturePackHub/index.html
+++ b/TexturePackHub/index.html
@@ -24,7 +24,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Texture Packs</button>
-                            <ul class="dropdown-menu dropdown-menu">
+                            <ul class="dropdown-menu dropdown-menu-dark">
                                 <li>
                                     <a class="dropdown-item" href="18">1.8</a>
                                 </li>
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="pricing">Pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about">About</a>
+                            <a class="nav-link" href="artists">Artists</a>
                         </li>
                     </ul>
                 </div>
