--- a/TexturePackHub/artists/index.html
+++ b/TexturePackHub/artists/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./assets/css/main.css">
+        <link rel="stylesheet" href="../assets/css/main.css">
         <link rel="icon" type="image/png" href="https://icons8.com/icon/xvnyHzuJqvNC/paint-brush">
     </head>
 
@@ -18,7 +18,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="./TexturePackHub/">Home</a>
+                            <a class="nav-link" href="../TexturePackHub/">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Texture Packs</button>
