--- a/TexturePackHub/artists/index.html
+++ b/TexturePackHub/artists/index.html
@@ -18,7 +18,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="../TexturePackHub/">Home</a>
+                            <a class="nav-link" href="../">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Texture Packs</button>
@@ -59,8 +59,11 @@
                     sakuradev
                 </h3>
                 <h5>
-                    sakuradev, also known by PandaCatPlayz, is the founder and web designer of Texture Pack Hub! sakuradev has made 5 public packs! IGN: PandaCatPlayz. Discord: sakuradev#0940.
+                    sakuradev, also known by PandaCatPlayz, is the founder and web designer of Texture Pack Hub! sakuradev has made 5 public packs!
                 </h5>
+                <h6>
+                    IGN: PandaCatPlayz. Discord: sakuradev#0940.
+                </h6>
                 <img class="banner" src="assets/images/banners/sakuradev.jpg" alt="sakuradev">
             </div>
         </div>
