--- a/TexturePackHub/artists/index.html
+++ b/TexturePackHub/artists/index.html
@@ -64,7 +64,7 @@
                 <h6>
                     IGN: PandaCatPlayz. Discord: sakuradev#0940.
                 </h6>
-                <img class="banner" src="assets/images/banners/sakuradev.jpg" alt="sakuradev">
+                <img class="banner" src="../assets/images/banners/sakuradev.jpg" alt="sakuradev">
             </div>
         </div>
     </body>
